[tool.poetry]
name = "furtherance-report"
version = "0.1.0"
description = ""
authors = ["Gabriel Arno Voltolini"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
